--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -134,6 +134,10 @@
         & + button {
             margin-left: 5px;
         }
+        &.mixitup-control-active {
+            background-color: $red;
+            color: #fff;
+        }
     }
 }
 .products__inner-box {
@@ -218,6 +222,10 @@
         color: $bg;
         padding: 20px 30px;
         cursor: pointer;
+        &.mixitup-control-active {
+            background-color: $red;
+            color: #fff;
+        }
     }
 }
 
