added product-slider, added stars

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -195,6 +195,7 @@
     &-author {
         display: flex;
         align-items: center;
+        max-width: 245px;
         span {
             font-size: 14px;
             font-weight: 500; 
@@ -208,6 +209,11 @@
             background-size: cover;
             display: inline-block;
             margin-right: 14px;
+        }
+    }
+    &-star {
+        span {
+            color: $bg;
         }
     }
 }
@@ -232,4 +238,39 @@
 
 
 // end products
+// Start product-slider
+
+.product-slider {
+    padding: 110px 0 120px;
+    .slick-dots {
+        text-align: center;
+        margin-top: 50px;
+        li {
+            display: inline-block;
+            margin-left: 3px;
+            margin-right: 3px;
+            &.slick-active {
+                button {
+                    background-color: $green;
+                }
+            }
+            button {
+                border-radius: 50%;
+                background-color: rgb(232, 232, 232);
+                border: none;
+                font-size: 0;
+                width: 16px;
+                height: 16px;
+                cursor: pointer;
+                outline: none;
+            }
+        }
+    }
+}
+
+
+
+
+
+// End product-slider
   
