--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -77,13 +77,13 @@
         margin-bottom: 10px;
         font-size: 48px;
         line-height: 72px;
-        font-weight: 700;
+        @include f700;
     }
     &-text {
         margin-bottom: 50px;
         font-size: 20px;
         line-height: 30px;
-        font-weight: 500;
+        @include f500;
     }
     &-form {
         max-width: 670px;
@@ -97,12 +97,12 @@
             border-radius: 4px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
             padding-left: 25px;
             padding-right: 60px;
             &::placeholder {
                 color: #90a4ae;
-                font-weight: 500;
+                @include f500;
             }
         }
         button {
@@ -164,7 +164,7 @@
         padding: 10px 30px;
         align-items: center;
         min-height: 90px;
-        font-weight: 500;
+        @include f500;
         border-bottom: 1px solid #e7ecf2;
     }
     &-name {
@@ -183,7 +183,7 @@
     &-price {
         font-size: 20px;
         color: $bg;
-        font-weight: 700;
+        @include f700;
     }
     &-info {
         display: flex;
@@ -198,7 +198,7 @@
         max-width: 245px;
         span {
             font-size: 14px;
-            font-weight: 500; 
+            @include f500;
         }
         .avatar {
             width: 30px;
@@ -269,8 +269,75 @@
 }
 
 
-
-
-
 // End product-slider
+// Start advantages
+
+.advantages {
+    background-color: $bg;
+    padding: 110px 0;
+    &__title {
+        color: #fff;
+    }
+}
+.advantages__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.advantages__item {
+    max-width: 370px;
+    text-align: center;
+    padding: 0 15px;
+    &:hover {
+        .advantages__item-images {
+            background-color: $green;
+            g {
+                fill: #fff;
+                transition: all .3s;
+            }
+        }
+        .advantages__item-title {
+            color: $green;
+        }
+    }
+    &-images {
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+        transition: all .3s;
+    }
+    &-title {
+        font-size: 24px;
+        margin-bottom: 25px;
+        color: #fff;
+        @include f500;
+        transition: all .3s;
+    }
+    &-text {
+        font-size: 15px;
+    }
+}
+.icosvg-1 {
+    svg {
+        width: 50px;  
+    }
+}
+.icosvg-2 {
+    svg {
+        width: 70px;
+    }
+    
+}
+.icosvg-3 {
+    svg {
+        width: 86px;
+    }
+}
+
+
+// End advantages
   
