--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,10 @@ html {
 *::after {
     box-sizing: inherit;
 }
+html,
+body {
+    height: 100%;
+}
 a {
     display: inline-block;
     text-decoration: none;
@@ -22,6 +26,17 @@ body {
     font-size: 15px;
     line-height: 24px;
     color: $text;
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+.content {
+    flex: 1 0 auto;
+}
+.footer {
+    flex: 0 0 auto;
 }
 .container {
     max-width: 1200px;
@@ -40,6 +55,10 @@ body {
     }
 }
 
+.page-content {
+    background-color: $grey;
+}
+
 .title {
     text-align: center;
     color: $bg;
@@ -52,4 +71,33 @@ body {
 .rate-star {
     display: inline-block;
     margin-right: 13px;
+}
+
+.breadcrumbs {
+    &__inner {
+        padding: 45px 0 40px;
+    }
+    &__list {
+        li {
+            display: inline-block;
+            position: relative;
+            & + li {
+                padding-left: 24px;
+                &::before {
+                    content: '-';
+                    position: absolute;
+                    left: 8px;
+                    color: $green;
+                }
+            }
+            a {
+                color: #b0bec5;
+            }
+            &:last-child {
+                a, span {
+                    color: $bg;
+                }
+            }
+        }
+    }
 }
