--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -68,6 +68,15 @@
     background-size: cover;
     background-position: center;
     min-height: 533px;
+    &.page-search {
+        min-height: 230px;
+        .search__inner {
+            padding: 55px 0 70px;
+            &-text {
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
 .search__inner {
     padding: 155px 0 100px;
@@ -202,7 +211,7 @@
         }
         .avatar {
             width: 30px;
-            height: 30px;
+            min-height: 30px;
             border-radius: 50%;
             background-position: center;
             background-repeat: no-repeat;
@@ -484,6 +493,10 @@
         color: #b7c3c8;
         padding-left: 22px;
         position: relative;
+        transition: all .3s;
+        &:hover {
+            color: #fff;
+        }
         &::before {
             content: '\f105';
             font-family: 'icomoon';
@@ -562,4 +575,282 @@
     }
 }
 // End footer
+
+// Start product-page
+
+.product-page__inner {
+    display: flex;
+    padding-bottom: 100px;
+}
+.product-page__aside {
+    margin-right: 30px;
+}
+.aside__item {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+}
+.aside__title {
+    border-bottom: 1px solid #dde3e8;
+    font-size: 20px;
+    color: $bg;
+    padding: 22px 0 19px;
+    @include f700;
+}
+.category__list {
+    padding-top: 10px;
+    li {
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        padding-left: 20px;
+        &::before {
+            content: '\f105';
+            position: absolute;
+            left: 0;
+            font-size: 18px;
+            font-family: 'icomoon';
+            color: $green;
+        }
+    }
+    a {
+        color: $bg;
+    }
+    span {
+        color: #90a4ae;
+        margin-left: 10px;
+    }
+}
+
+.price-range {
+    form {
+        padding-top: 20px;
+        padding-bottom: 25px;
+    }
+    button {
+        margin-top: 55px;
+        padding: 16px 10px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        width: 100%;
+        display: block;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        &::before {
+            content: '\f002';
+            position: absolute;
+            left: 58px;
+            top: 15px;
+            font-size: 15px;
+            font-family: 'icomoon';
+            color: #fff;
+        }
+    }
+}
+.irs-min,
+.irs-max {
+    display: none;
+}
+.irs--flat .irs-line {
+    background-color: #f2f5f8;
+    height: 5px;
+}
+.irs--flat .irs-bar {
+    background-color: $bg;
+    height: 5px;
+}
+.irs--flat .irs-handle {
+    width: 16px;
+    height: 16px;
+    border: 4px solid $green;
+    background-color: #fff;
+    border-radius: 50%;
+    top: 19px;
+}
+.irs--flat .irs-handle>i:first-child {
+    display: none;
+}
+.irs-from, .irs-single, .irs-to {
+    top: 45px;
+}
+.irs--flat .irs-from:before, .irs--flat .irs-single:before, .irs--flat .irs-to:before {
+    display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {
+    color: #78909c;
+    font-size: 15px;
+    line-height: 1.333;
+    text-shadow: none;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+}
+.product-page__aside {
+    .products__item {
+        box-shadow: none;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #dde3e8;
+        &-img {
+            min-height: 120px;
+        }
+        &-title {
+            font-size: 16px;
+        }
+        &-price {
+            font-size: 16px;
+        }
+        &-content {
+            padding: 0;
+            min-height: 75px;
+            border-bottom: none;
+        }
+        &-info {
+            padding: 0;
+            min-height: 0;
+        }
+        &-star {
+            margin-right: 0;
+            span {
+                display: none;
+            }
+        }
+        &-author .avatar {
+            margin-right: 9px;
+        }
+        & .jq-ry-container {
+            padding: 0;
+        }
+    }
+    .rate-star {
+        margin-right: 0;
+    }
+}
+.aside__products-item {
+    .products__item:last-child {
+        border: none;
+        padding-bottom: 0;
+    }
+    .products__item:first-child {
+        margin-top: 20px;
+    }
+}
+
+.top-sellers__link {
+    padding: 12px 10px;
+    display: block;
+    background-color: $green;
+    color: #fff;
+    @include f500;
+    text-align: center;
+}
+
+.product-page__filter-sort {
+    color: #707070;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.product-page__content {
+    width: 100%;
+}
+
+.product-page__filter {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 20px;
+    margin-bottom: 30px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        font-size: 16px;
+        color: #90a4ae;
+        &.active {
+            color: $green;
+        }
+    }
+}
+button.icon-sort-amount-desc {
+    font-size: 18px;
+    color: #455a64;
+}
+button.icon-unsorted {
+    font-size: 14px;
+    color: #707070;
+}
+
+.product-page__content {
+    .products__item {
+        max-width: 270px;
+        background-color: #fff;
+        transition: all .2s;
+        &:hover {
+            box-shadow: 0px 16px 20px 0px rgba(216, 216, 216, 0.75);
+        }
+        &-img {
+            min-height: 180px;
+        }
+        &-content {
+            padding: 10px 20px;
+        }
+        &-title {
+            font-size: 16px;
+        }
+        &-info {
+            min-height: 65px;
+            padding: 10px 20px;
+        }
+    }
+    .rate-star {
+        margin-right: 5px;
+    }
+    .jq-ry-container {
+        padding: 0;
+    }
+}
+.product-page__items {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.pagination__list {
+    li {
+        display: inline-block;
+        & + li {
+            margin-left: 6px;
+        }
+    }
+    a,
+    span {
+        box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+        width: 43px;
+        height: 38px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        font-size: 16px;
+        color: $bg;
+        @include f500;
+        &.active {
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+// End product-page
+
+
   
