adaprive header and footer

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,9 @@
 
 // start header 
 
+.header {
+    background-color: #fff;
+}
 .header__top-inner {
     display: flex;
     justify-content: space-between;
@@ -114,12 +117,12 @@
     }
 }
 .basket {
+    margin-right: 20px;
     span {
         background-color: $green;
     }
 }
 .user {
-    margin-left: 20px;
     margin-right: 25px;
     padding-right: 20px;
     position: relative;
@@ -197,6 +200,7 @@
     right: 0;
     height: 0;
     overflow: hidden;
+    z-index: 1;
     transition: all .3s;
 }
 .basket__box,
@@ -302,6 +306,11 @@
 }
 .icons-color::before {
     color: $tomato;
+}
+
+.header__btn-menu,
+.menu__btn {
+    display: none;
 }
 
 // end header
@@ -1178,3 +1187,7 @@ button.icon-unsorted {
 
 
   
+
+
+
+@import 'media';
